# nnue-vision

./: .gitignore  CLEANUP_TODO.md  README.md  README_QUANTIZED.md  RUNPOD_USAGE.md  checkpoint_manager.py  container_setup.sh  dataset.py  etinynet_adapter.py  evaluate.py  model.py  nnue.py  nnue_adapter.py  nnue_runpod_service.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-runpod.txt  requirements-test.txt  requirements.txt  run_comprehensive_tests.py  run_example_benchmark.py  run_fast_tests.py  runpod_service.py  runpod_service_nnue.py  serialize.py  test_etinynet.py  test_etinynet_cifar10.py  test_etinynet_serialization.py  test_nnue_inference_fix.py  test_quantized_model.py  train.py  train_etinynet.py  train_minimal.py  train_nnue.py  train_quantized.py  training_framework.py  training_utils.py  visual_wake_words_model.pt
config/: __init__.py  config_loader.py  train_default.py  train_etinynet.py  train_etinynet_default.py  train_etinynet_test.py  train_imagenet_runpod.py  train_minimal.py  train_nnue.py  train_nnue_cosine.py  train_nnue_default.py  train_nnue_sgd_cosine.py  train_nnue_test.py  train_nnue_working.py  train_quantized.py  train_runpod.py  train_test.py
data/: README.md  __init__.py  dataset_inspector.py  datasets.py  inspect_dataset.py  loaders.py
engine/: CMakeLists.txt  README.md  benchmark_engine.cpp  benchmark_etinynet_engine.cpp  etinynet_inference.cpp  nnue_inference.cpp  regression_test.cpp
engine/build_san/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  benchmark_engine  cmake_install.cmake  etinynet_inference  nnue_example  nnue_inference  regression_test  test_etinynet_engine  test_nnue_engine
engine/debug_test.dSYM/Contents/Resources/DWARF/: debug_test
engine/examples/: example_usage.cpp
engine/include/: nnue_engine.h
engine/src/: nnue_engine.cpp  simd_avx2.cpp  simd_neon.cpp  simd_scalar.cpp
engine/tests/: test_etinynet_engine.cpp  test_nnue_engine.cpp
lib/: nnue_training_data_stream.h
lightning_logs/version_0/: events.out.tfevents.1753160585.MacBook-Pro-4.local.56179.0  events.out.tfevents.1753160828.MacBook-Pro-4.local.56179.1
lightning_logs/version_0/checkpoints/: epoch=9-step=1570.ckpt
lightning_logs/version_1/: events.out.tfevents.1753191071.MacBook-Pro-4.local.66920.0  events.out.tfevents.1753191078.MacBook-Pro-4.local.66920.1
scripts/: compare_engine_speed.py  easy_train.py  run_mcu_benchmarks.py  run_tests.py  train.sh  train_with_wandb.py  validate_benchmarks.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_actual_training.py  test_augmentation_integration.py  test_augmentation_validation.py  test_benchmark_integration.py  test_checkpoint_saving_fix.py  test_compiled_evaluation_fix.py  test_compiled_parity.py  test_complete_fix_verification.py  test_cpp_compilation.py  test_cpp_regression.py  test_cpp_regression_etinynet.py  test_cpp_regression_nnue.py  test_dataset.py  test_docker_args_graphql_safe.py  test_integration.py  test_keep_alive.py  test_mcu_benchmarks.py  test_metric_calculation.py  test_model.py  test_quantized_model.py  test_runpod_integration.py  test_runpod_service.py  test_train_etinynet_cli.py  test_training.py  test_training_debug.py  test_training_framework.py  test_training_integration.py  test_training_scripts.py  test_unified_training.py  test_wandb_checkpoints.py  test_weight_decay.py
